add boucle / experiment 16h46 27/07/22

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -72,6 +72,7 @@
                   type="text"
                   id="first"
                   name="first"
+                  minlength="2"
                   required
                 /><br>
                 <span id="error"></span>
@@ -84,6 +85,7 @@
                   type="text"
                   id="last"
                   name="last"
+                  minlength="2"
                   required
                 /><br>
                 <span id="error"></span>
@@ -202,7 +204,7 @@
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1" id="checkbox1" required>
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
