--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -58,11 +58,11 @@
           <span class="close"></span>
           <div class="modal-body">
             <form
+              id="confirmation"
               name="reserve"
               action="index.html"
               method="get"
               novalidate
-              onsubmit="return validateForm()"
             >
               <div
                 class="formData">
