--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="Logo.png"/>
     </div>
     <div class="main-navbar">
       
@@ -29,7 +29,6 @@
     </div>
     </div>
     
-  </div>
     <main>
       <div class="hero-section">
         <div class="hero-content">
@@ -75,7 +74,7 @@
                   minlength="2"
                   required
                 /><br>
-                <span id="error"></span>
+                <span class="error"></span>
               </div>
               <div
                 class="formData">
@@ -88,7 +87,7 @@
                   minlength="2"
                   required
                 /><br>
-                <span id="error"></span>
+                <span class="error"></span>
               </div>
               <div
                 class="formData">
@@ -100,7 +99,7 @@
                   name="email"
                   required
                 /><br>
-                <span id="error"></span>
+                <span class="error"></span>
               </div>
               <div
                 class="formData">
@@ -112,13 +111,13 @@
                   name="birthdate"
                   required
                 /><br>
-                <span id="error"></span>
+                <span class="error"></span>
               </div>
               <div
                 class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
-                <span id="error"></span>
+                <span class="error"></span>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div class="formData">
@@ -193,7 +192,7 @@
                   Portland</label
                 >
                 <br>
-                <span id="error"></span>
+                <span class="error"></span>
               </div>
 
               <div
@@ -204,12 +203,12 @@
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" id="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1" >
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <span id="error"></span>
+                <span class="error"></span>
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
@@ -218,9 +217,8 @@
                 <br>
               </div>
               <input
-                class="btn-submit"
+                class="btn-submit button"
                 type="submit"
-                class="button"
                 value="C'est parti"
               />
             </form>
